--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             
             <h3>Primary Organizer</h3>
             <div class="organizer">
-                <p><strong>Chenglu Wen:</strong> Professor of the Department of Artificial Intelligence at Xiamen University, and Young Yangtze River Scholar. Her main research focuses on 3D vision, intelligent processing of point clouds, and multimodal fusion perception.</p>
+                <p><strong>Chenglu Wen:</strong> Professor of the Department of Artificial Intelligence at Xiamen University. Her main research focuses on 3D vision, intelligent processing of point clouds, and multimodal fusion perception.</p>
             </div>
 
             <h3>Co-Organizers</h3>
@@ -175,6 +175,15 @@
             </div>
             <div class="organizer">
                 <p><strong>Huanjia Zhang:</strong> M.S. Student, ASC, Xiamen University. His research interests include 3D computer vision and their applications in intelligent transportation systems.</p>
+            </div> 
+            <div class="organizer">
+                <p><strong>Shijia Zhao:</strong> Ph.D. Student, ASC, Xiamen University. His research interests include 3D computer vision and their applications in intelligent transportation systems.</p>
+            </div> 
+            <div class="organizer">
+                <p><strong>Hai Wu:</strong> Assistant Researcher, Pengcheng Lab. His research interests include 3D computer vision and their applications in intelligent transportation systems.</p>
+            </div> 
+            <div class="organizer">
+                <p><strong>Jinghao Deng:</strong> Algorithm Engineer, Xiaopeng. His research interests include 3D computer vision and their applications in intelligent transportation systems.</p>
             </div> 
         </section>
 
