--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 
         <section id="overview" class="section">
             <h2>Challenge Overview</h2>
-            <p>Welcome to the Object3DD Challenge 2025, XXX</p>
+            <p>Welcome to the 2025 Object3DD Challenge, a premier international competition focused on advancing 3D traffic scene understanding through point cloud processing. This challenge is part of the 13th International Conference on Mobile Mapping Technology (MMT 2025) and aims to bring together researchers and practitioners to tackle fundamental challenges in object perception under autonomous driving scenarios.</p>
             
             <p>The significance of this research domain is multifaceted:</p>
             <ol>
-                <li>XXX</li>
-                <li>XXX</li>
-                <li>XXX</li>
+                <li>Advancing autonomous vehicle perception systems through robust 3D object perception.</li>
+                <li>Enabling knowledge transfer across different sensor systems to enhance the generalizability of autonomous driving models under various types of LiDAR.</li>
+                <li>Developing multimodal collaborative perception systems to improve the safety of autonomous driving.</li>
             </ol>
             
-            <p>XXX</p>
+            <p>With the continuous iteration of 3D sensors and the widespread adoption of intelligent vehicles, there is an urgent need to develop frameworks for cross-sensor LiDAR and multi-agent collaborative object perception. In this challenge, we welcome submissions of efficient domain adaptation methods and multimodal collaborative perception approaches. This workshop provides a structured platform for the dissemination of algorithmic innovations, methodological advances, and empirical findings in this rapidly evolving field. The challenge offers generous prizes and is open to students, teachers, and researchers in relevant fields.</p>
         </section>
 
         <section id="tracks" class="section">
