--- a/index.html
+++ b/index.html
@@ -179,12 +179,12 @@
             </div> 
         </section>
 
-        <section id="speakers" class="section">
+<!--         <section id="speakers" class="section">
             <h2>Confirmed Speakers</h2>
             <div class="speaker">
                 <p><strong>XXX:</strong> XXXXX</p>
             </div>
-        </section>
+        </section> -->
 
         <section id="impact" class="section">
             <h2>Broader Impact</h2>
