--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
             <div class="organizer">
                 <p><strong>Shijia Zhao:</strong> Ph.D. Student, ASC, Xiamen University. His research interests include 3D computer vision and their applications in intelligent transportation systems.</p>
             </div> 
-            <div class="organizer">
+<!--             <div class="organizer">
                 <p><strong>Hai Wu:</strong> Assistant Researcher, Pengcheng Lab. His research interests include 3D computer vision and their applications in intelligent transportation systems.</p>
             </div> 
             <div class="organizer">
                 <p><strong>Jinghao Deng:</strong> Algorithm Engineer, Xiaopeng. His research interests include 3D computer vision and their applications in intelligent transportation systems.</p>
-            </div> 
+            </div>  -->
         </section>
 
 <!--         <section id="speakers" class="section">
