--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
             <h2>Broader Impact</h2>
             <p>The intellectual contributions and methodological frameworks developed through this challenge have the potential to catalyze significant technological and societal advancements across multiple domains:</p>
             <ul>
-                <li>Enhanced semantic understanding of transportation infrastructure facilitates the development of safer autonomous navigation systems, potentially reducing the approximately 1.35 million annual traffic fatalities worldwide.</li>
-                <li>Precise digital representations of transportation networks enable more efficient infrastructure maintenance scheduling, potentially yielding substantial economic benefits.</li>
-                <li>The methods developed can contribute to more accurate carbon footprint assessments of transportation networks, supporting evidence-based policies for environmental sustainability.</li>
+                <li>Enhanced Autonomous Driving Safety and Efficiency. Improving the accuracy and robustness of 3D object detection in autonomous vehicles enhances safety by enabling better perception in diverse environments. These technologies also optimize traffic flow management through more precise traffic information, reducing congestion and improving overall transportation efficiency.</li>
+                <li>Improved Infrastructure Management and Environmental Sustainability. Accurate detection of infrastructure damage facilitates more efficient maintenance scheduling, reducing the risk of accidents caused by deteriorating infrastructure. Additionally, optimized traffic flow management lowers energy consumption and carbon emissions, supporting environmental sustainability.</li>
+                <li>Advancements in Multimodal Data Fusion and System Integration. Providing New Frameworks for Data Integration. New frameworks for aligning and integrating data from multiple sensors enhance the capabilities of intelligent transportation systems. These advancements support the development of more comprehensive and reliable traffic monitoring and management solutions.</li>
             </ul>
 
             <h3>Ethical Considerations</h3>
