--- a/index.html
+++ b/index.html
@@ -179,12 +179,13 @@
             </div>  -->
         </section>
 
-<!--         <section id="speakers" class="section">
+        <section id="speakers" class="section">
             <h2>Confirmed Speakers</h2>
             <div class="speaker">
-                <p><strong>XXX:</strong> XXXXX</p>
+                <p><strong>Hai Wu:</strong> Assistant Researcher, Pengcheng Lab. Topic: Research on High-Precision 3D Object Detection Algorithms
+ </p>
             </div>
-        </section> -->
+        </section>
 
         <section id="impact" class="section">
             <h2>Broader Impact</h2>
