--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>The significance of this research domain is multifaceted:</p>
             <ol>
                 <li>Advancing autonomous vehicle perception systems through robust 3D object perception.</li>
-                <li>Enabling knowledge transfer across different sensor systems to enhance the generalizability of autonomous driving models under various types of LiDAR.</li>
+                <li>Enabling knowledge transfer across different mechanisms to enhance the generalizability of autonomous driving models under various mechanisms of LiDAR sensors.</li>
                 <li>Developing multimodal collaborative perception systems to improve the safety of autonomous driving.</li>
             </ol>
             
