--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <section id="overview" class="section">
             <h2>Challenge Overview</h2>
-            <p>Welcome to the 2025 Object3DD Challenge, a premier international competition focused on advancing 3D traffic scene understanding through point cloud processing. This challenge is part of the 13th International Conference on Mobile Mapping Technology (MMT 2025) and aims to bring together researchers and practitioners to tackle fundamental challenges in object perception under autonomous driving scenarios.</p>
+            <p>Welcome to the 2025 Object3DD Challenge, a premier international competition focused on advancing traffic scene understanding through 3D object detection. This challenge is part of the 13th International Conference on Mobile Mapping Technology (MMT 2025) and aims to bring together researchers and practitioners to tackle fundamental challenges in object perception under autonomous driving scenarios.</p>
             
             <p>The significance of this research domain is multifaceted:</p>
             <ol>
