--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <section id="speakers" class="section">
             <h2>Confirmed Speakers</h2>
             <div class="speaker">
-                <p><strong>Hai Wu:</strong> Assistant Researcher, Pengcheng Lab. Topic: Research on High-Precision 3D Object Detection Algorithms
+                <p><strong>Hai Wu:</strong> Assistant Researcher, Pengcheng Lab. Topic: Research on High-Precision 3D Object Detection Algorithms.
  </p>
             </div>
         </section>
