--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 
         <section id="prizes" class="section">
             <h2>Prizes</h2>
-            <p>We are thankful to our sponsor for providing the following prizes. The prize award will be granted to the Top 3 individuals and teams on the leaderboard that provide valid submissions.</p>
+            <p>We are thankful to our sponsor for providing the prizes. The prize award will be granted to the Top 3 individuals and teams on the leaderboard that provide valid submissions.</p>
             <ul class="prizes-list">
-                <li><strong>1st Place:</strong> XXX CNY</li>
+<!--                 <li><strong>1st Place:</strong> XXX CNY</li>
                 <li><strong>2nd Place:</strong> XXX CNY</li>
-                <li><strong>3rd Place:</strong> XXX CNY</li>
+                <li><strong>3rd Place:</strong> XXX CNY</li> -->
             </ul>
         </section>
 
